k8s/ecg-etl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecg-etl
spec:
  selector: 
    matchLabels:
      app: ecg-etl
  replicas: 1
  template:
    metadata:
      labels:
        app: ecg-etl
    spec:
      containers:
        - name: ecg-etl
          image: ucg-etl:latest 
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
