k8s/film-etl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-etl
spec:
  selector: 
    matchLabels:
      app: film-etl
  replicas: 1
  template:
    metadata:
      labels:
        app: film-etl
    spec:
      containers:
        - name: film-etl
          image: film-etl:latest 
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
