k8s/notification-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-consumer
spec:
  selector: 
    matchLabels:
      app: notification-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-consumer
    spec:
      containers:
        - name: notification-consumer
          image: notification-consumer:latest 
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
