k8s/notification-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-scheduler
spec:
  selector: 
    matchLabels:
      app: notification-scheduler
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-scheduler
    spec:
      containers:
        - name: notification-scheduler
          image: notification-scheduler:latest 
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
