k8s/notification-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
spec:
  selector: 
    matchLabels:
      app: notification-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-worker
    spec:
      containers:
        - name: notification-worker
          image: notification-worker:latest 
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
