k8s/auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-api:latest
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8000
              httpHeaders:
                - name: X-Request-Id
                  value: $(uuidgen)
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          readinessProbe:
            exec:
              command: ['sh', '/config/readiness.sh']
            initialDelaySeconds: 15
            periodSeconds:  30
            timeoutSeconds: 2
            failureThreshold: 5
          volumeMounts:
            - name: config-volume
              mountPath: '/config/readiness.sh'
              subPath: readiness.sh
              readOnly: true  
      volumes: 
        - name: config-volume
          configMap:
            name: readiness-script
