k8s/django-film-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-film-service
spec:
  type: NodePort
  selector:
    app: django-film-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-film-service
spec:
  selector: 
    matchLabels:
      app: django-film-service
  replicas: 1
  template:
    metadata:
      labels:
        app: django-film-service
    spec:
      containers:
        - name: django-film-service
          image: django-film-api:latest
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/admin"
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
