k8s/filmwork-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: film-service
spec:
  type: NodePort
  selector:
    app: film-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-service
spec:
  selector: 
    matchLabels:
      app: film-service
  replicas: 1
  template:
    metadata:
      labels:
        app: film-service
    spec:
      containers:
        - name: film-service
          image: filmwork-api:latest
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8000
              httpHeaders:
                - name: X-Request-Id
                  value: $(uuidgen)
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
