k8s/notification-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-notification-service
spec:
  type: NodePort
  selector:
    app: django-notification-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-notification-service
spec:
  selector: 
    matchLabels:
      app: django-notification-service
  replicas: 1
  template:
    metadata:
      labels:
        app: django-notification-service
    spec:
      containers:
        - name: django-notification-service
          image: notification-admin:latest
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/notifications/admin/"
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
