k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec: 
  type: NodePort
  selector:
    app: notification-service
  ports:
    - name: http-service
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: grpc-service
      port: 50051
      targetPort: 50051
      protocol: TCP

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  selector:
    matchLabels:
      app: notification-service
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service-http
          image: notification-service-api:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "800Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8000
              httpHeaders:
                - name: X-Request-Id
                  value: $(uuidgen)
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
         
        - name: notification-service-grpc
          image: notification-service-api:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "800Mi"
          ports:
            - containerPort: 50051
