k8s/notification-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-websocket
spec:
  type: NodePort
  selector:
    app: notification-websocket
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-websocket
spec:
  selector: 
    matchLabels:
      app: notification-websocket
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-websocket
    spec:
      containers:
        - name: notification-websocket
          image: notification-websocket:latest
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 8000
---
