k8s/ucg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ucg-service
spec:
  type: NodePort
  selector:
    app: ucg-service
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucg-service
spec:
  selector: 
    matchLabels:
      app: ucg-service
  replicas: 1
  template:
    metadata:
      labels:
        app: ucg-service
    spec:
      containers:
        - name: ucg-service
          image: ucg-api:latest
          imagePullPolicy: Never
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 5001
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 5001
              httpHeaders:
                - name: X-Request-Id
                  value: $(uuidgen)
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
