k8s/url-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec: 
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - name: url-shortener
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  selector:
    matchLabels:
      app: url-shortener
  replicas: 1
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: url-shortener:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "800Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8000
              httpHeaders:
                - name: X-Request-Id
                  value: $(uuidgen)
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
